--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday Savita">
 	<meta name="robots" content="index, follow" />
-	<link rel="author" href="https://www.linkedin.com/in/suryakant-pandey/" /> 
+	<link rel="author" href="https://t.me/codepreceptor" /> 
     <meta name="keywords" content="Birthday, Happy">
     <!-- Strat of Facebook Meta -->
     <meta property="og:type" content="E-Greeting" />
     <!-- <meta property="og:image" href="images/others/favicon.ico" /> -->
     <link rel="icon" href="images/others/favicon.ico" type="image/x-icon" />
-    <meta property="og:description" content="Wish you a very Happy Birthday">
+    <meta property="og:description" content="Wish you a very Happy Birthday Bhai">
     <!-- End of Facebook Meta Tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -56,13 +56,13 @@
     	<h3 style="color:#D14D39;">D</h3>
     </div>
 	<div class="balloons col-xs-2 text-center" id="b4">
-    	<h3 style="color:#8FAD00;">S</h3>
+    	<h3 style="color:#8FAD00;">B</h3>
     </div>
 	<div class="balloons col-xs-2 text-center" id="b5">
-    	<h3 style="color:#8377E4;">A</h3>
+    	<h3 style="color:#8377E4;">H</h3>
     </div>
     <div class="balloons col-xs-2 text-center" id="b6">
-    	<h3 style="color:#99C96A;">V</h3>
+    	<h3 style="color:#99C96A;">A</h3>
     </div>
     <div class="balloons col-xs-2 text-center" id="b7">
     	<h3 style="color:#20CFB4;">I</h3>
@@ -143,7 +143,7 @@
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="initial">Welcome to Savita's BirthDay Party</button>
+					<button class="btn btn-primary" id="initial">Welcome to Himanshu's BirthDay Party</button>
 					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
 					<button class="btn btn-primary" id="play">Play Music</button>
 					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
@@ -163,9 +163,9 @@
 	<div id="card">
 <div id="card-inside">
 <div class="wrap">
-<center><p style="font-size:3vw;" class="animated infinite wobble"><b><u>Happy Birthday Savita!</b></u></p><center>
-<p style="font-size:1vw;" > Hey Savi, Today is a very special and beautiful day . So let's make it the best celebration with all your friends. &nbsp;<i class="em-svg em-blush"></i></p>
-<p style="font-size:1vw;"> Happiest Birthday manu . I made all this as a birthday present to you. I wish the best for you and thanks for being there for me , thanks for the friendship we made, thanks for everything.
+<center><p style="font-size:3vw;" class="animated infinite wobble"><b><u>Happy Birthday Himanshu!</b></u></p><center>
+<p style="font-size:1vw;" > Hey Bhai, Today is a very special and beautiful day . So let's make it the best celebration with all your friends. &nbsp;<i class="em-svg em-blush"></i></p>
+<p style="font-size:1vw;"> Happiest Birthday Bhai . I made all this as a birthday present to you. I wish the best for you and thanks for being there for me , thanks for everything.
   Enjoy every single moment that you experience today, fill it with your most beautiful smile and make it the best memory. </p><p style="font-size:3vw;" class="signed"><u>Made With </b><b> <i class="em-svg em-heart"></i></p>
 </div>
 </div>
