--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
     <img src="images/ballons/Balloon-Border.png" width="100%" class="balloon-border">
     <img src="images/others/tenor.gif" id = "welcome_dance" alt="dancing step"  class = "center1" width=250/>
 
-    <img src="images/humans/self.png" width="100%" class="self-border" id ="self">
+    <img src="images/2.png" width="100%" class="self-border" id ="self">
 
-    <img src="images/humans/self.png"  class="self-border" id ="self">
-    <img src="images/humans/f1.png" class="self-border" id ="f1">
-    <img src="images/humans/f2.png"  class="self-border" id ="f2">
+    <img src="images/1.png"  class="self-border" id ="self">
+    <img src="images/3.png" class="self-border" id ="f1">
+    <img src="images/4.png"  class="self-border" id ="f2">
     
 
     <img src="images/others/cake.png" width="100%" class="cake_class" id ="cake_pink">
@@ -160,7 +160,7 @@
 </div>
 <div id="card-front">
 <div class="wrap">
-<h1 style="font-size:5vw;" class="animated infinite swing">HBD 2020 Savi!</h1>
+<h1 style="font-size:5vw;" class="animated infinite swing">HBD 2023 Bhai</h1>
 <div class="cake_and_velas">
 <div class="velas">
 <div class="fuego"></div>
