--- a/src/html/surprise.html
+++ b/src/html/surprise.html
@@ -109,7 +109,7 @@ a{
 }
 
 body{
-  background: url('../../images/humans/together/collage.jpg');
+  background: url('../../images/3.png');
   background-position: center center;
   background-size: cover;
 }
@@ -126,9 +126,9 @@ body{
   <div class="overlay-static" >    
     <div class="inline-blocks">
       <h2 class="twenty-one block">2</h2>
-      <img class="image block" src="../../images/humans/together/us1.jpg">
+      <img class="image block" src="../../images/4.png">
       <h2 class="twenty-one block"> 2</h2>
-      <img class="image block" src="../../images/humans/together/us2.jpg">
+      <img class="image block" src="../../images/3.png">
     </div>
    
     
