--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 					<button class="btn btn-primary" id="play">Play Music</button>
 					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
 					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="invite_friends">Invite Friends</button>
+					<button class="btn btn-primary" id="invite_friends">Let's Celebrate</button>
 					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="dj_time">DJ Time</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="dj_time">Music Time</button>
+					<button class="btn btn-primary" id="story">A message for you</button>
 					<button class="btn btn-primary" id="picture_time">Special Moments</button>
 				</div>
 			</div>
